package(default_visibility = ["//visibility:public"])

sh_binary(
  name = "echo",
  srcs = [
    "scripts/echo.sh",
  ],
)

sh_binary(
  name = "upx",
  srcs = [
    "scripts/upx.sh",
  ],
  data = [
    "@upx//:upx",
  # "@upx_osx//file",
  ],
)

sh_binary(
  name = "direnv",
  srcs = [
    "scripts/direnv.sh",
  ],
  data = [
    "@direnv//file",
    "@direnv_osx//file",
  ],
)

sh_binary(
  name = "jq",
  srcs = [
    "scripts/jq.sh",
  ],
  data = [
    "@jq//file",
    "@jq_osx//file",
  ],
)

sh_binary(
  name = "yj",
  srcs = [
    "scripts/yj.sh",
  ],
  data = [
    "@yj//file",
    "@yj_osx//file",
  ],
)

sh_binary(
  name = "yaml",
  srcs = [
    "scripts/yaml.sh",
  ],
  data = [
    "@yaml//file",
    "@yaml_osx//file",
  ],
)

sh_binary(
  name = "kubectl",
  srcs = [
    "scripts/kubectl.sh",
  ],
  data = [
    "@kubectl//file",
    "@kubectl_osx//file",
  ],
)

sh_binary(
  name = "tsfmt",
  srcs = [
    "scripts/tsfmt.sh",
  ],
  data = [
    "@tsfmt//:cli-linux",
    "@tsfmt//:cli-macos",
  ],
)

sh_binary(
  name = "etcd",
  srcs = [
    "scripts/etcd.sh",
  ],
  data = [
    "@etcd//:etcd",
  ],
)

sh_binary(
  name = "etcdctl",
  srcs = [
    "scripts/etcdctl.sh",
  ],
  data = [
    "@etcd//:etcdctl",
  ],
)

sh_binary(
  name = "helm",
  srcs = [
    "scripts/helm.sh",
  ],
  data = [
    "@helm//:helm",
    "@helm_osx//:helm",
  ],
)

sh_binary(
  name = "bat",
  srcs = [
    "scripts/bat.sh",
  ],
  data = [
    "@bat//:bat",
    "@bat_osx//:bat",
  ],
)

sh_binary(
  name = "k9s",
  srcs = [
    "scripts/k9s.sh",
  ],
  data = [
    "@k9s//:k9s",
    "@k9s_osx//:k9s",
  ],
)

sh_binary(
  name = "pulumi",
  srcs = [
    "scripts/pulumi.sh",
  ],
  data = [
    "@pulumi//:pulumi",
    "@pulumi_osx//:pulumi",
  ],
)

sh_binary(
  name = "k0s",
  srcs = [
    "scripts/k0s.sh",
  ],
  data = [
    "@new_k0s//:filegroup",
  ],
)
